force-app/main/default/objects/FEC_MDM_Decision_Condition__c/FEC_MDM_Decision_Condition__c.object-meta.xml
<CustomObject>
    <description>MDM Decision Condition - stores conditions for stage transition routing rules (replaces FEC_MDM_Stage_Change_Condition__c)</description>
    <label>FEC MDM Decision Condition</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC MDM Decision Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>