force-app/main/default/objects/FEC_MDM_Decision_Condition__c/fields/FEC_Label__c.field-meta.xml
<CustomField>
    <fullName>FEC_Label__c</fullName>
    <description>Column label for Action type conditions</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>