force-app/main/default/objects/FEC_MDM_Decision_Condition__c/fields/FEC_Master_Data_Setting__c.field-meta.xml
<CustomField>
    <fullName>FEC_Master_Data_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Data Setting</label>
    <referenceTo>FEC_MDM_Master_Data_Setting__c</referenceTo>
    <relationshipLabel>Decision Conditions</relationshipLabel>
    <relationshipName>Decision_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>