force-app/main/default/objects/FEC_MDM_Decision_Condition__c/fields/FEC_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>