force-app/main/default/objects/FEC_MDM_Decision_Condition__c/fields/Process_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Change_Status__c</fullName>
    <label>Process Change Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>